versions/26.1.2/translated/ru_ru/develop/automatic-testing.md
---
title: Автоматизированное тестирование
description: Руководство по написанию автоматических тестов с помощью Fabric Loader JUnit.
authors:
  - kevinthegreat1
---

На этой странице объясняется, как написать код для автоматического тестирования частей вашего мода. Существует два способа автоматического тестирования вашего мода: модульные тесты с помощью Fabric Loader JUnit или игровые тесты с помощью фреймворка Gametest из Minecraft.

Модульные тесты следует использовать для тестирования компонентов вашего кода, таких как методы и вспомогательные классы, в то время как игровые тесты запускают реальный клиент и сервер Minecraft для запуска ваших тестов, что делает их подходящими для тестирования функций и игрового процесса.

## Модульное тестирование {#unit-testing}

Поскольку моддинг Minecraft основан на инструментах модификации байт-кода во время выполнения, таких как Mixin, простое добавление и использование JUnit обычно не работает. Вот почему Fabric предоставляет Fabric Loader JUnit — плагин JUnit, который позволяет проводить модульное тестирование в Minecraft.

### Настройка Fabric Loader JUnit {#setting-up-fabric-loader-junit}

Сначала нам необходимо добавить Fabric Loader JUnit в среду разработки. Добавьте следующее в блок зависимостей в `build.gradle`:

<<< @/reference/build.gradle#automatic_testing_1

Затем нам нужно указать Gradle использовать Fabric Loader JUnit для тестирования. Это можно сделать, добавив следующий код в `build.gradle`:

<<< @/reference/26.1.2/build.gradle#automatic_testing_2

### Написание тестов {#writing-tests}

После перезагрузки Gradle вы будете готовы писать тесты.

Эти тесты пишутся так же, как и обычные тесты JUnit, с небольшой дополнительной настройкой, если вам нужно получить доступ к любому классу, зависящему от реестра, например `ItemStack`. Если вы знакомы с JUnit, можете перейти к разделу [Настройка реестров](#setting-up-registries).

#### Настройка вашего первого тестового класса {#setting-up-your-first-test-class}

Тесты пишутся в каталоге `src/test/java`.

Одним из правил именования является отражение структуры пакета тестируемого класса. Например, чтобы протестировать `src/main/java/com/example/docs/codec/BeanType.java`, вам нужно создать класс в `src/test/java/com/example/docs/codec/BeanTypeTest.java`. Обратите внимание, как мы добавили `Test` в конец имени класса. Это также позволяет легко получить доступ к методам и полям, закрытым для пакета.

Другое соглашение об именовании — наличие пакета `test`, например `src/test/java/com/example/docs/test/codec/BeanTypeTest.java`. Это предотвращает некоторые проблемы, которые могут возникнуть при использовании того же пакета, если вы используете модули Java.

После создания тестового класса используйте <kbd>⌘/CTRL</kbd>+<kbd>N</kbd>, чтобы вызвать меню «Создать». Выберите Test и начните вводить имя метода, обычно начинающееся с `test`. Нажмите <kbd>ENTER</kbd>, когда закончите. Дополнительные советы и рекомендации по использованию IDE см. в разделе [Советы и рекомендации по IDE](./getting-started/tips-and-tricks#code-generation).

![Создание метода тестирования](/assets/develop/misc/automatic-testing/unit_testing_01.png)

Конечно, вы можете написать сигнатуру метода вручную, и любой метод экземпляра без параметров и с типом возвращаемого значения void будет идентифицирован как тестовый метод. В итоге у вас должно получиться следующее:

![Пустой метод тестирования с тестовыми индикаторами](/assets/develop/misc/automatic-testing/unit_testing_02.png)

Обратите внимание на зеленые стрелки индикаторы в желобе: вы можете легко запустить тест, щелкнув по ним. В качестве альтернативы ваши тесты будут запускаться автоматически для каждой сборки, включая сборки CI такие, как GitHub Actions. Если вы используете GitHub Actions, не забудьте прочитать [Настройка GitHub Actions](#setting-up-github-actions).

Теперь пришло время написать настоящий тестовый код. Вы можете утверждать условия, используя `org.junit.jupiter.api.Assertions`. Проверьте следующий тест:

<<< @/reference/26.1.2/src/test/java/com/example/docs/codec/BeanTypeTest.java#automatic_testing_4

Объяснение того, что на самом деле делает этот код, см. в разделе [Кодеки](./codecs#registry-dispatch).

#### Настройка реестров {#setting-up-registries}

Отлично, первый тест сработал! Но подождите, второй тест не прошёл? В журналах мы получаем одну из следующих ошибок.

<<< @/public/assets/develop/automatic-testing/crash-report.log

Это происходит потому, что мы пытаемся получить доступ к реестру или классу, который зависит от реестра (или, в редких случаях, зависит от других классов Minecraft таких, как `SharedConstants`), но Minecraft не инициализирован. Нам нужно просто немного инициализировать его, чтобы реестры заработали. Просто добавьте следующий код в начало метода `beforeAll`.

<<< @/reference/26.1.2/src/test/java/com/example/docs/codec/BeanTypeTest.java#automatic_testing_7

### Настройка действий GitHub {#setting-up-github-actions}

::: info

В этом разделе предполагается, что вы используете стандартный рабочий процесс GitHub Action, включенный в пример мода и в шаблон мода.

:::

Теперь ваши тесты будут запускаться для каждой сборки, включая сборки поставщиков непрерывной интеграции, таких как GitHub Actions. Но что делать, если сборка не удалась? Нам необходимо загрузить журналы как артефакт, чтобы мы могли просматривать отчеты об испытаниях.

Добавьте это в файл `.github/workflows/build.yaml`, ниже шага `./gradlew build`.

```yaml
- name: Store reports
  if: failure()
  uses: actions/upload-artifact@v4
  with:
    name: reports
    path: |
      **/build/reports/
      **/build/test-results/
```

## Игровые тесты {#game-tests}

Minecraft предоставляет игровой тестовый фреймворк для тестирования функций на стороне сервера. Fabric дополнительно предоставляет клиентские игровые тесты для тестирования функций на стороне клиента, аналогичные сквозным тестам.

### Настройка игровых тестов с помощью Fabric Loom {#setting-up-game-tests-with-fabric-loom}

Как серверные, так и клиентские игровые тесты можно настраивать вручную или с помощью Fabric Loom. В этом руководстве мы будем использовать Loom.

Чтобы добавить игровые тесты в свой мод, добавьте следующее в `build.gradle`:

<<< @/reference/26.1.2/build.gradle#automatic_testing_game_test_1

Чтобы увидеть все доступные опции, см. [документацию Loom по тестам](./loom/fabric-api#tests).

#### Настройка каталога игровых тестов {#setting-up-game-test-directory}

::: info

Этот раздел нужен только в том случае, если вы включили `createSourceSet`, что рекомендуется. Вы, конечно, можете сделать свою собственную магию Gradle, но в этом случае вы будете предоставлены сами себе.

:::

Если вы включили `createSourceSet`, как в примере выше, ваш геймтест будет находиться в отдельном наборе исходников с отдельным `fabric.mod.json`. По умолчанию имя модуля равно `gametest`. Создайте новый файл `fabric.mod.json` в папке `src/gametest/resources/`, как показано на рисунке:

<<< @/reference/26.1.2/src/gametest/resources/fabric.mod.json

Обратите внимание, что файл `fabric.mod.json` ожидает тест серверной игры в `src/gametest/java/com/example/docs/ExampleModGameTest`, а тест клиентской игры — в `src/gametest/java/com/example/docs/ExampleModClientGameTest`.

### Написание игровых тестов {#writing-game-tests}

Теперь вы можете создавать серверные и клиентские игровые тесты в директории `src/gametest/java`. Вот базовый пример для каждого из них:

::: code-group

<<< @/reference/26.1.2/src/gametest/java/com/example/docs/ExampleModGameTest.java[Server]

<<< @/reference/26.1.2/src/gametest/java/com/example/docs/ExampleModClientGameTest.java[Client]

:::

Более подробную информацию можно найти в соответствующих Javadocs в Fabric API.

### Запуск тестов игры {#running-game-tests}

Тесты серверной игры будут запускаться автоматически с помощью задачи Gradle `build`. Вы можете запустить тесты клиентской игры с помощью задачи Gradle `runClientGameTest`.

### Запуск тестов игры в GitHub Actions {#run-game-tests-on-github-actions}

Существующие рабочие процессы GitHub Action, использующие `build`, будут автоматически запускать тесты серверных игр. Чтобы запустить тесты клиентской игры с помощью GitHub Actions, добавьте следующий фрагмент кода в файл `build.gradle` и следующее задание в рабочий процесс. Фрагмент кода Gradle запустит клиентские тесты игры с помощью [задач Loom по производственному запуску](./loom/production-run-tasks), а задание выполнит задачу производственного запуска в CI.

::: warning

В настоящее время тестирование игр может завершаться с ошибкой в GitHub Actions из-за сбоя в работе сетевого синхронизатора. Если вы столкнулись с этой ошибкой, вы можете добавить `-Dfabric.client.gametest.disableNetworkSynchronizer=true` к аргументам JVM в декларации задачи производственного цикла.

:::

<<< @/reference/26.1.2/build.gradle#automatic_testing_game_test_2

<<< @/.github/workflows/build.yaml#automatic_testing_game_test_3
